# unitree_IL_lerobot

./: .gitignore  .gitmodules  README.md  README_ja.md  README_zh.md  convert_aloha_data_to_lerobot_json.py  pyproject.toml
docs/: README.md  README_zh.md
eval_robot/eval_g1/: README.md  eval_g1.py
eval_robot/eval_g1/image_server/: image_server.py
lerobot/: .gitignore  pyproject.toml
lerobot/lerobot/common/datasets/push_dataset_to_hub/: unitree_json_format.py
lerobot/lerobot/common/robot_devices/cameras/: opencv.py  realsense.py
lerobot/lerobot/configs/: default.yaml
lerobot/lerobot/configs/env/: unitree_real_g1.yaml  unitree_real_z1.yaml
lerobot/lerobot/configs/policy/: act_unitree_real_g1.yaml  act_unitree_real_z1.yaml  diffusion_unitree_real.yaml  diffusion_unitree_real_g1.yaml  diffusion_unitree_real_z1.yaml  vqbet_z1.yaml
lerobot/lerobot/configs/robot/: unitree.yaml
lerobot/lerobot/scripts/: control_robot_unitree.py  eval_g1.py  eval_z1.py  g1_larm.urdf  push_dataset_to_hub.py
lerobot/tests/: test_control_robot.py
test/: test_load_dataset.py  test_load_h5.py
unitree_lerobot/eval_robot/eval_g1/: eval_g1.py  eval_g1_dataset.py  eval_real_config.py  test_act.py
unitree_lerobot/eval_robot/eval_g1/robot_control/: robot_arm.py  robot_hand_unitree.py
unitree_lerobot/utils/: constants.py  convert_lerobot_to_h5.py  convert_unitree_json_to_h5.py  convert_unitree_json_to_lerobot.py  sort_and_rename_folders.py
unitree_utils/: sort_and_rename_folders.py
unitree_utils/robot_control/: robot_arm.py  robot_hand_unitree.py
utils/: convert_unitree_json_to_lerobot.py
(+2 files in other folders)
