[tool.poetry]
name = "unitree_lerobot"
version = "0.1.0"
description = "unitree data conversion and real machine inference verification"
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "unitree_lerobot"}]
requires-python = ">=3.10,<3.11"

[tool.poetry.dependencies]
transformers = "^4.45.2"
tyro = "^0.9.10"
matplotlib = "^3.9.0"
datasets = "3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

